# custom-keypad

./: .gitignore  CLAUDE.md  CMakeLists.txt
cmake/: mingw-w64-x86_64.cmake
src/: edge_flash.cpp  edge_flash.h  hotkey.cpp  hotkey.h  indicator.cpp  indicator.h  main.cpp  overlay.cpp  overlay.h  switcher.cpp  switcher.h
